examples/test/testpolicy6046.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6046
  namespace: namespace259
spec:
  podSelector:
    matchLabels:
      key0: value17
      key45: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value3
          key40: value23
      podSelector:
        matchLabels:
          key43: value5
          key27: value0
          key23: value45
